# squeekboard

./: .gitignore  .gitlab-ci.yml  CI_CD_SUMMARY.md  CROSS_COMPILE_README.md  Cargo.toml  Dockerfile.arm64  NEWS  NEWS.md  QUICK_START.md  README.md  build-rpi5-direct.sh  cargo.sh  cross-arm64.ini  cross-arm64.txt  cross-build-rpi5.sh  meson.build  meson_options.txt  squeekboard_1.44.0-rpi5_arm64.deb
.github/: README.md  README.zh-CN.md  WORKFLOW_DIAGRAM.md
.github/workflows/: build-and-release.yml  ci.yml
.gitlab-ci/: README.md  debian.Dockerfile  run-docker.sh
data/: common.css  meson.build  sm.puri.Squeekboard.gschema.xml  sm.puri.Squeekboard.service.in  squeekboard.gresources.xml  style-Adwaita:dark.css  style.css
data/keyboards/: am+phonetic.yaml  am+phonetic_wide.yaml  am.yaml  am_wide.yaml  ara.yaml  ara_wide.yaml  be.yaml  be_wide.yaml  bg+phonetic.yaml  bg+phonetic_wide.yaml  bg.yaml  bg_wide.yaml  br.yaml  br_wide.yaml  by.yaml  by_wide.yaml  ca.yaml  ca_wide.yaml  ch+de.yaml  ch+de_wide.yaml  ch+fr.yaml  ch+fr_wide.yaml  ch.yaml  ch_wide.yaml  cz+qwerty.yaml  cz+qwerty_wide.yaml  cz.yaml  cz_wide.yaml  de+bone.yaml  de+bone_wide.yaml  de+neo.yaml  de+neo_wide.yaml  de.yaml  de_wide.yaml  dk.yaml  dk_wide.yaml  epo.yaml  epo_wide.yaml  es+cat.yaml  es+cat_wide.yaml  (+67 more)
data/keyboards/email/: us.yaml  us_wide.yaml
data/keyboards/emoji/: us.yaml  us_wide.yaml
data/keyboards/number/: us.yaml  us_wide.yaml
data/keyboards/terminal/: de.yaml  de_wide.yaml  es.yaml  es_wide.yaml  fr+bepo.yaml  fr+bepo_wide.yaml  fr.yaml  fr_wide.yaml  kr.yaml  kr_wide.yaml  us+dvorak.yaml  us+dvorak_wide.yaml  us.yaml  us_wide.yaml
data/keyboards/url/: us.yaml  us_wide.yaml
data/langs/: es-ES.txt
debian/: changelog  control  rules  squeekboard.alternatives  squeekboard.install  squeekboard.user.service
debian/cargo/: config.toml
doc/: hacking.md  index.md  layouts.md  tutorial.md
eek/: eek-keyboard.c  eek-renderer.c
po/: LINGUAS  ar.po  bg.po  en_GB.po  eo.po  ja.po  kw.po  tr.po  uz.po
protocols/: meson.build
squeekboard_1.44.0-rpi5_arm64/DEBIAN/: control
squeekboard_1.44.0-rpi5_arm64/usr/share/squeekboard/keyboards/: bg+phonetic_wide.yaml  br.yaml  br_wide.yaml  by.yaml  by_wide.yaml  ca.yaml  ch+de.yaml  ch+fr.yaml  cz+qwerty_wide.yaml  de+neo.yaml  de+neo_wide.yaml  de_wide.yaml  dk.yaml  dk_wide.yaml  epo.yaml  es.yaml  gr+polytonic.yaml  gr+polytonic_wide.yaml  hu.yaml  hu_wide.yaml  il_wide.yaml  in+mal.yaml  in+mal_wide.yaml  it.yaml  it_wide.yaml  jp+kana_wide.yaml  pl.yaml  pl_wide.yaml  pt.yaml  pt_wide.yaml  ro_wide.yaml  rs+latin.yaml  rs.yaml  rs_wide.yaml  ru.yaml  se.yaml  th.yaml  ua.yaml  ua_wide.yaml  us+colemak.yaml  (+3 more)
squeekboard_1.44.0-rpi5_arm64/usr/share/squeekboard/keyboards/email/: us.yaml
squeekboard_1.44.0-rpi5_arm64/usr/share/squeekboard/keyboards/emoji/: us.yaml  us_wide.yaml
squeekboard_1.44.0-rpi5_arm64/usr/share/squeekboard/keyboards/number/: us.yaml  us_wide.yaml
squeekboard_1.44.0-rpi5_arm64/usr/share/squeekboard/keyboards/pin/: us.yaml
squeekboard_1.44.0-rpi5_arm64/usr/share/squeekboard/keyboards/terminal/: fr+bepo_wide.yaml  fr.yaml  fr_wide.yaml  us+dvorak.yaml  us+dvorak_wide.yaml
squeekboard_1.44.0-rpi5_arm64/usr/share/squeekboard/keyboards/url/: us.yaml
src/: action.rs  keyboard.rs  keycodes.rs  layout.rs  lib.rs  main.rs  meson.build  outputs.rs  panel.c  popover.rs  resources.rs  server-context-service.c  server-main.c  state.rs  submission.rs  tests.rs  util.rs
src/data/: parsing.rs
tests/: meson.build
