[package]
name = "rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "rs"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

# Cargo can't do autodiscovery if Cargo.toml is not in the root.
[[bin]]
name = "test_layout"
path = "src/bin/test_layout.rs"

[[example]]
name = "test_layout"
path = "examples/test_layout.rs"

[[example]]
name = "find_orphan_layouts"
path = "examples/find_orphan_layouts.rs"

[features]
zbus_v1_5 = []
clap_v4 = []

[dependencies]
maplit = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
bitflags = "1.3"
clap = { version = "4.4", features=["std"], default-features = false }
zbus = { version = "4", features = ["blocking"] }
zvariant = "4"
zvariant_derive = "4"
xkbcommon = { version = "0.8", features = ["wayland"] }

[dependencies.cairo-rs]
version = "0.18"

[dependencies.cairo-sys-rs]
version = "0.18"

[dependencies.gdk]
version = "0.18"

[dependencies.gio]
version = "0.18"
features = ["v2_58"]

[dependencies.glib]
version = "0.18"
features = ["v2_58"]

[dependencies.glib-sys]
version = "0.18"
features = ["v2_58"]

[dependencies.gtk]
version = "0.18"
features = ["v3_24"]

[dependencies.gtk-sys]
version = "0.18"
features = ["v3_24"]
